[workspace]
resolver = "2"
members = ["host", "methods"]

[workspace.dependencies]
alloy-primitives = { version = "0.7", features = ["serde", "rlp", "std"] }
alloy-rlp = { version = "0.3.4", default-features = false }
alloy-rlp-derive = { version = "0.3.4", default-features = false }
alloy-sol-types = { version = "0.7" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
ethers-core = "2.0"
ethers-providers = "2.0"
log = "0.4"
erc20-methods = { path = "methods" }
nybbles = { version = "0.2.1", features = ["serde"] }
once_cell = "1.19"
revm = { version = "9.0", default-features = false, features = ["std"] }
risc0-steel = "0.11.1"
risc0-zkvm = { version = "1.0.1", default-features = false }
rlp = "0.5.2"
serde = "1.0"
thiserror = "1.0"
tokio = { version = "1.35" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0"  }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
# From ECDSA example in risc0 monorepo
# Hack for development, compile times at the host bin are a lot better with lto="light"
# cargo r -r
debug = 1
lto = "thin"

[profile.release.build-override]
opt-level = 3
