[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
erc20-methods = { workspace = true }
risc0-steel = { version = "0.11.1", features = ["host"] }
risc0-zkvm = { workspace = true, features = ["client"] }
tracing-subscriber = { workspace = true }
k256 = { version = "=0.13.3", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default-features = false }
alloy-signer-local = "0.1.3"
alloy-signer = "0.1.3"
